# petra_ui

./: .gitignore  .gitlab-ci.yml  Procfile  README.md  db.sqlite3  manage.py  package-lock.json  package.json  pom.xml  pyproject.toml  requirements.txt
a03/: pom.xml
django_propensi/: asgi.py  clever-coast-345001-44e43c5bec88.json  settings.py  urls.py  wsgi.py
new rizma/: index_baru.js
propensi/: admin.py  apps.py  models.py  models_auth.py  serializer.py  urls.py  views.py
propensi/migrations/: 0001_initial.py  0002_karyailmiah_pengumuman_kategori.py  0002_rename_katakunci_karyailmiah_keyword.py  0002_semester_alter_karyailmiah_semesterdisetujui.py  0003_alter_karyailmiah_dosenpembimbing_and_more.py  0003_profile_full_name_alter_karyailmiah_userpengunggah_and_more.py  0003_rename_keyword_karyailmiah_katakunci.py  0004_alter_karyailmiah_filepdf.py  0004_visitors.py  0005_karyailmiah_fileuri.py  0006_alter_karyailmiah_filepdf.py  0006_remove_profile_full_name.py  0007_alter_karyailmiah_filepdf.py  0007_profile_full_name.py  0008_alter_karyailmiah_filepdf.py  0009_merge_20220323_1200.py  0010_karyailmiah_katakunci_and_more.py  0011_remove_karyailmiah_daftarpengunduh_daftarunduhan.py  0012_visitors.py  0013_karyailmiah_userpenandabuku.py  0014_alter_profile_npm.py  0014_remove_karyailmiah_dosenpembimbing_and_more.py  0015_alter_profile_npm.py
propensi/templates/ssoui/: index.html  (+1 more)
public/: index.html
src/: App.js  http-common.js  index.css  index.js
src/components/: tutorial.component.js
src/services/: authentication.service.js  visitorTracking.service.js
(+100 files in other folders)
